fix misstakes with flex-wrap

--- a/css/style.css
+++ b/css/style.css
@@ -119,7 +119,8 @@ a:visited {
 .card {
   background: #fff;
   width: 30%;
-  flex-basis: 30%;
+  max-width: 270px;
+  min-width: 200px;
 }
 
 .cardWrapper {
